--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "author": "iwp_assn",
   "license": "ISC",
+  "engines": {
+    "node": "14.17.4"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "ejs": "^2.7.4",
     "express": "^4.18.2",
     "express-sanitizer": "^1.0.6",
-    "mongoose": "^5.13.15"
+    "mongoose": "^5.13.15",
   }
 }
