--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "ejs": "^2.7.4",
     "express": "^4.18.2",
     "express-sanitizer": "^1.0.6",
-    "mongoose": "^5.13.15",
+    "mongoose": "^5.13.15"
   }
 }
